[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dytools"
version = "4.0.0"
description = "Douyu Live Stream Danmu (弹幕) Collector - A modular, async-capable library for collecting chat messages from Douyu live streams."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Douyu Danmu Crawler Project", email = "contact@example.com"}
]
keywords = ["douyu", "danmu", "chat", "websocket", "async"]
dependencies = [
    "websockets>=12.0",
    "psycopg[binary]>=3.0.0",
    "click>=8",
    "loguru>=0.7.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "rapidfuzz>=3.14.1",
    "construct>=2.10.70",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/douyu/danmu"
Repository = "https://github.com/douyu/danmu"
Documentation = "https://github.com/douyu/danmu/blob/main/README.md"
Issues = "https://github.com/douyu/danmu/issues"

[project.scripts]
dytools = "dytools.__main__:main"

[tool.setuptools]
packages = ["dytools", "dytools.storage", "dytools.collectors", "dytools.tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# Suppress psycopg3 incomplete type stub errors (third-party limitation)
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
