[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dykit"
version = "4.0.0"
description = "Douyu Live Stream Danmu (弹幕) Collector - A modular, async-capable library for collecting chat messages from Douyu live streams."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Douyu Danmu Crawler Project", email = "contact@example.com"}
]
keywords = ["douyu", "danmu", "chat", "websocket", "async"]
dependencies = [
    "websockets>=12.0",
    "psycopg[binary]>=3.0.0",
    "click>=8",
    "rich>=14.0.0",
    "loguru>=0.7.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "rapidfuzz>=3.14.1",
    "construct>=2.10.70",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "basedpyright>=1.31.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "vulture>=2.14",
]

[project.urls]
Homepage = "https://github.com/Joxos/dykit"
Repository = "https://github.com/Joxos/dykit"
Documentation = "https://github.com/Joxos/dykit/blob/main/README.md"
Issues = "https://github.com/Joxos/dykit/issues"

[project.scripts]
dykit = "dykit.cli.app:cli"

[tool.setuptools]
packages = [
    "dykit",
    "dykit.cli",
    "dykit.cli.commands",
    "dykit.cli.services",
    "dykit.storage",
    "dykit.collectors",
    "dykit.tools",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "typings"
# Suppress psycopg3 incomplete type stub errors (third-party limitation)
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: real database smoke tests",
]
