[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dykit"
version = "5.0.1"
description = "Meta package that installs dyproto, dycap, and dystat."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "dyproto>=0.1.0",
    "dycap>=0.1.0",
    "dystat>=0.1.0",
]

[tool.setuptools]
py-modules = []

[tool.uv.workspace]
members = ["dyproto", "dycommon", "dycap", "dystat"]

[tool.uv.sources]
dyproto = { workspace = true }
dycommon = { workspace = true }
dycap = { workspace = true }
dystat = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "typings"
# Suppress psycopg3 incomplete type stub errors (third-party limitation)
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: real database smoke tests",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "basedpyright>=1.28.0",
    "vulture>=2.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
