[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dycap"
version = "0.1.0"
description = "Douyu Live Stream Danmu Collector - async library and CLI for collecting chat messages."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Douyu Danmu Crawler Project", email = "contact@example.com"}
]
keywords = ["douyu", "danmu", "chat", "websocket", "collector"]
dependencies = [
    "dyproto[discovery]>=0.1.0",
    "websockets>=12.0",
    "psycopg[binary]>=3.0.0",
    "click>=8",
    "rich>=14.0.0",
    "loguru>=0.7.0",
    "tenacity>=9.1.2",
]

[project.scripts]
dycap = "dycap.cli:collect"

[tool.uv.sources]
dyproto = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
