[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dystat"
version = "0.1.1"
description = "Douyu Statistics Tools - analyze danmu data with rank, cluster, search, and prune."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Douyu Danmu Crawler Project", email = "contact@example.com"}
]
keywords = ["douyu", "danmu", "chat", "statistics", "analysis"]
dependencies = [
    "dycommon>=0.1.0",
    "dyproto[discovery]>=0.1.0",
    "psycopg[binary]>=3.0.0",
    "click>=8",
    "rich>=14.0.0",
    "rapidfuzz>=3.14.1",
]

[project.scripts]
dystat = "dystat.cli:cli"

[tool.uv.sources]
dycommon = { workspace = true }
dyproto = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
